[package]
name = "sokol_rust_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sokol = { git="https://github.com/floooh/sokol-rust" }
egui = "0.21"


[[example]]
name = "main_test"
path = "examples/main_test.rs"
